tests/ext/invalid/While_CompileFail_3.whiley
void System::main([string] args):
    i=0
    while i < |args|:
        r = r + |args[i]|
    debug str(r)
